Fix Gallery logo overflow

--- a/src/render/styles/style.css
+++ b/src/render/styles/style.css
@@ -77,6 +77,9 @@ html, body {
   margin: 0;
   padding: 0;
 }
+.bigtext, .gallerylogo {
+  max-width: 100%;
+}
 .scaled, header, nav ul li a:hover:before, nav ul li.active a:before, nav a#pull {
   width: 100%;
 }
